# app/Http/Controllers/UserPreferenceController.php
@@ -24,23 +24,11 @@ class UserPreferenceController extends Controller
      *      summary="Get user preferences",
      *      tags={"User Preferences"},
      *      security={{"sanctum":{}}},
-     *      @OA\Response(response=200, description="Success")
+     *      @OA\Response(response=200, description="Success", @OA\JsonContent (ref="#/components/schemas/UserPreference")),
+     *      @OA\Response(response=401, description="Unauthenticated", @OA\JsonContent(
+     *                @OA\Property(property="message", type="string", example="Unauthenticated.")
+     *            ))
      * )
-     *
-     * @OA\SecurityScheme(
-     *      securityScheme="sanctum",
-     *      type="http",
-     *      scheme="bearer",
-     *      bearerFormat="Token"
-     *  )
-     *
-     * @OA\Parameter(
-     *          name="Accept",
-     *          in="header",
-     *          required=false,
-     *          description="Response content type",
-     *          @OA\Schema(type="string", default="application/json")
-     *      )
      */
     public function show()
     {
@@ -52,6 +40,41 @@ class UserPreferenceController extends Controller
     /**
      * @param Request $request
      * @return \Illuminate\Http\JsonResponse
+     *
+     * @OA\Post(
+     * path="/api/user/preferences",
+     * summary="Update user preferences",
+     * tags={"User Preferences"},
+     * security={{"sanctum":{}}},
+     *
+     * @OA\RequestBody(
+     * required=true,
+     * @OA\JsonContent(
+     * type="object",
+     * @OA\Property(property="preferred_sources", type="array", @OA\Items(type="string")),
+     * @OA\Property(property="preferred_categories", type="array", @OA\Items(type="string")),
+     * @OA\Property(property="preferred_authors", type="array", @OA\Items(type="string"))
+     * )
+     * ),
+     *
+     * @OA\Response(
+     * response=200,
+     * description="Preferences updated successfully.",
+     * @OA\JsonContent(
+     * type="object",
+     * @OA\Property(property="message", type="string", example="Preferences updated successfully."),
+     * @OA\Property(
+     * property="data",
+     * ref="#/components/schemas/UserPreference"
+     * )
+     * )
+     * ),
+     * @OA\Response(response=401, description="Unauthenticated", @OA\JsonContent(
+     * @OA\Property(property="message", type="string", example="Unauthenticated.")
+     * )),
+     * @OA\Response(response=422, description="Validation error", @OA\JsonContent(
+     *  @OA\Property(property="message", type="string", example="Invalid source")
+     *  )))
      */
     public function update(Request $request)
     {
